# boot-rs

./: Cargo.toml  Readme.md  Todo.md  boot.cfg.tst  build_boot.sh  build_init.sh  build_strap.sh  new-boot-src.sh  rust-toolchain.toml
.cargo/: config.toml
boot-lib/: Cargo.toml
boot-lib/src/: crypt.rs  lib.rs
boot-rs/: Cargo.toml
boot-rs/src/: main.rs
boot-strap/: Cargo.toml
boot-strap/src/: app.rs  initramfs.rs  main.rs
initramfs-lib/: Cargo.toml
initramfs-lib/src/: error.rs  lib.rs  print.rs
initramfs-rs/: Cargo.toml
initramfs-rs/src/: app.rs  main.rs
