[workspace]
resolver = "2"
members = ["boot-lib", "boot-rs", "boot-strap", "initramfs-lib", "initramfs-rs"]

[workspace.dependencies]
boot-lib = { path = "boot-lib" }
initramfs-lib = { path = "initramfs-lib" }

aes-gcm = { version = "0.10.3", default-features = false, features = ["alloc", "aes"] }
argon2 = { version = "0.5.3", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false }
rusl = { version = "0.3.0", default-features = false}
tiny-cli = { version = "0.2.1" }
tiny-std = { version = "0.2.4", default-features = false }
uefi = { version = "0.28.0", features = ["alloc", "global_allocator", "panic_handler"] }
