[package]
name = "boot-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.8.2", default-features = false }
argon2 = { version = "0.5.0", default-features = false, features = ["alloc"] }
cfb8 = { version = "0.8.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }