[package]
name = "boot-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { workspace = true, default-features = false, features = ["alloc", "aes"] }
argon2 = { workspace = true, default-features = false, features = ["alloc"] }