[package]
name = "boot-strap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot-lib = { workspace = true }
hex = { workspace = true, default-features = false, features = ["alloc"] }
initramfs-lib = { workspace = true }
tiny-cli = { workspace = true }
tiny-std = { workspace = true, features = ["alloc", "executable", "global-allocator"]}
rusl = { workspace = true, features = ["alloc"]}
unix-print = { workspace = true }
