[package]
name = "initramfs-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusl = { path = "../../tiny-std/rusl", features = ["alloc"] }
tiny-std = { path = "../../tiny-std/tiny-std", default-features = false, features = ["alloc"] }
unix-print = { version = "0.1" }