[package]
name = "initramfs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
initramfs-lib = { workspace = true }
rusl = { workspace = true, features = ["alloc"] }
tiny-std = { workspace = true, features = ["alloc", "executable", "global-allocator"]}
unix-print = { workspace = true }